# dkvs

./: .gitignore  dkvs.cabal  dkvs.properties  runclient.sh  runserver.sh  stack.yaml
app/: ClientApp.hs  Main.hs  ServerApp.hs
src/: Client.hs  Config.hs  Paxos.hs  PaxosTypes.hs  Server.hs  Types.hs  Utils.hs
