name:                dkvs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dkvs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
                     , Config
                     , Server
                     , Paxos
                     , PaxosTypes
  build-depends:       base >= 4.7 && < 5
                     , distributed-process >= 0.6.4
                     , distributed-process-p2p >= 0.1.3.2
                     , network-transport >= 0.4.4.0
                     , network-transport-tcp >= 0.5.1
                     , binary >= 0.8.3.0
                     , syb >= 0.6
                     , containers >= 0.5.7.1
                     , MissingH >= 1.4.0.1
                     , split >= 0.2.3.1
                     , tuple >= 0.3.0.2
                     , dequeue >= 0.1.12
                     , monad-loops >= 0.4.3
  default-language:    Haskell2010

executable dkvs-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dkvs
  default-language:    Haskell2010

test-suite dkvs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dkvs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dkvs
