name:                dkvs
version:             0.1.0.0
synopsis:            Dynamic key-value storage with Multipaxos consensus algorithm
description:         Please see README.md
homepage:            https://github.com/AVBelyy/dkvs#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Belyy
maintainer:          anton.belyy@gmail.com
copyright:           2016 Anton Belyy
category:            Backend
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types
                     , Config
                     , Utils
                     , Server
                     , Client
                     , Paxos
                     , PaxosTypes
  build-depends:       base >= 4.7 && < 5
                     , distributed-process >= 0.6.4
                     , distributed-process-p2p >= 0.1.3.2
                     , network-transport >= 0.4.4.0
                     , network-transport-tcp >= 0.5.1
                     , binary >= 0.8.3.0
                     , syb >= 0.6
                     , containers >= 0.5.7.1
                     , MissingH >= 1.4.0.1
                     , split >= 0.2.3.1
                     , tuple >= 0.3.0.2
                     , dequeue >= 0.1.12
                     , monad-loops >= 0.4.3
                     , ansi-terminal >= 0.6.2.3
  default-language:    Haskell2010

executable dkvs-server
  hs-source-dirs:      app
  main-is:             ServerApp.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dkvs
  default-language:    Haskell2010

executable dkvs-client
  hs-source-dirs:      app
  main-is:             ClientApp.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dkvs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AVBelyy/dkvs
